Eureka server y Zuul conf inicial

--- a/ms-models/ms-models-example/src/main/resources/application.properties
+++ b/ms-models/ms-models-example/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 # beeto.exception.handler.enable=true
+spring.application.name=ms-model-example
+server.port=${PORT:0}
+
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
 
 #beeto.documentation.enable=true
-brz.documentation.data.rest.enable=true
+#brz.documentation.data.rest.enable=true
 brz.documentation.data.rest.api.basePackage=beeto.server.community.groupsmodel.persistence
 brz.documentation.data.rest.api.title= Beeto Groups Model Microservice
 brz.documentation.data.rest.api.description= API Documentation
@@ -13,5 +20,3 @@ brz.documentation.data.rest.developer.email = danielolivadenis@gmail.com
 spring.data.mongodb.database=social-sport-network
 # spring.data.mongodb.uri=mongodb+srv://admin:abc123.@cluster0-xkq1m.mongodb.net/test?retryWrites=true&w=majority
 spring.data.mongodb.uri=mongodb+srv://admin:abc123.@cluster0-xkq1m.mongodb.net/
-
-server.port=8091
