--- a/ms-models/ms-model-property/src/main/resources/application.properties
+++ b/ms-models/ms-model-property/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+spring.application.name=ms-model-property
+server.port=${PORT:0}
+
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+
 #brz.exception.handler.enable=true
 
 #brz.documentation.data.rest.enable=true
@@ -12,5 +20,3 @@ brz.documentation.data.rest.developer.email = danielolivadenis@gmail.com
 spring.data.mongodb.database=property-project
 # spring.data.mongodb.uri=mongodb+srv://admin:ovEFpViO4WvFM8ho@cluster0-xkq1m.mongodb.net/test?retryWrites=true&w=majority
 spring.data.mongodb.uri=mongodb+srv://admin:ovEFpViO4WvFM8ho.@cluster0-ksewe.mongodb.net/
-
-server.port=9001
