--- a/ms-services/ms-services-example/src/main/resources/application.properties
+++ b/ms-services/ms-services-example/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 #brz.exception.handler.enable=true
 
+spring.application.name=ms-services-example
+server.port=${PORT:0}
+
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+
 brz.documentation.enable=true
 brz.documentation.api.basePackage=beeto.server.community.clubsmodel.presentation.controllers
 brz.documentation.api.title= Beeto Clubs Model Microservice
@@ -12,5 +20,3 @@ brz.documentation.developer.email = danielolivadenis@gmail.com
 spring.data.mongodb.database=social-sport-network
 # spring.data.mongodb.uri=mongodb+srv://admin:abc123.@cluster0-xkq1m.mongodb.net/test?retryWrites=true&w=majority
 spring.data.mongodb.uri=mongodb+srv://admin:abc123.@cluster0-xkq1m.mongodb.net/
-
-server.port=8090
