--- a/brz-eureka-zuul/src/main/resources/application.properties
+++ b/brz-eureka-zuul/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=servicio-zuul-server
+spring.application.name=zuul-server-service
 server.port=8090
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
@@ -6,8 +6,9 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 zuul.routes.properties.service-id=ms-model-property
 zuul.routes.properties.path=/api/properties/**
 
-zuul.routes.example.service-id=ms-model-example
-zuul.routes.example.path=/api/example/**
+zuul.routes.security.service-id=security-oauth-service
+zuul.routes.security.path=/api/security/**
+zuul.routes.security.sensitive-headers=Cookie,Set-Cookie
 
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 20000
 #ribbon.ConnectTimeout: 3000
