Zuul cors update

--- a/brz-eureka-zuul/src/main/resources/application.properties
+++ b/brz-eureka-zuul/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8090
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
-zuul.routes.properties.service-id=ms-model-property
-zuul.routes.properties.path=/api/properties/**
+zuul.routes.properties.service-id=ms-model-home
+zuul.routes.properties.path=/api/homes/**
 
 zuul.routes.security.service-id=security-oauth-service
 zuul.routes.security.path=/api/security/**
