--- a/brz-eureka-commons/pom.xml
+++ b/brz-eureka-commons/pom.xml
@@ -16,9 +16,17 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<jackson.version>2.9.10</jackson.version>
 	</properties>
 
 	<dependencies>
+	    <!--jackson for xml -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
