integreting model office and premise to zuul

--- a/brz-eureka-zuul/src/main/resources/application.properties
+++ b/brz-eureka-zuul/src/main/resources/application.properties
@@ -3,8 +3,15 @@ server.port=8090
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
-zuul.routes.properties.service-id=ms-model-home
-zuul.routes.properties.path=/api/homes/**
+zuul.routes.homes.service-id=ms-model-home
+zuul.routes.homes.path=/api/homes/**
+
+zuul.routes.offices.service-id=ms-model-office
+zuul.routes.offices.path=/api/offices/**
+
+zuul.routes.premises.service-id=ms-model-promise
+zuul.routes.premises.path=/api/premises/**
+
 
 zuul.routes.security.service-id=security-oauth-service
 zuul.routes.security.path=/api/security/**
