Refactoring libraries for own started project

--- a/brv-spring-boot-autoconfiguration/brv-autoconfiguration-ms-staters/model-datarest-ms-spring-boot-starter/pom.xml
+++ b/brv-spring-boot-autoconfiguration/brv-autoconfiguration-ms-staters/model-datarest-ms-spring-boot-starter/pom.xml
@@ -35,6 +35,12 @@
           <artifactId>logging-library</artifactId>
           <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+          <groupId>brv.autoconfiguration.libraries.models</groupId>
+          <artifactId>model-entities-library</artifactId>
+          <version>1.0.0-SNAPSHOT</version>
+        </dependency>
         
         <dependency>
           <groupId>brv.autoconfiguration.autoconfigures.logging</groupId>
