Preliminary final version for FP Project

--- a/brz-eureka-zuul/src/main/resources/application.properties
+++ b/brz-eureka-zuul/src/main/resources/application.properties
@@ -12,11 +12,14 @@ zuul.routes.offices.path=/api/offices/**
 zuul.routes.premises.service-id=ms-model-promise
 zuul.routes.premises.path=/api/premises/**
 
+zuul.routes.resources-images.service-id=ms-service-azure-storage
+zuul.routes.resources-images.path=/api/resources/images/**
+
 
 zuul.routes.security.service-id=security-oauth-service
 zuul.routes.security.path=/api/security/**
 zuul.routes.security.sensitive-headers=Cookie,Set-Cookie
 
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 20000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 40000
 ribbon.ConnectTimeout: 3000
 ribbon.ReadTimeout: 10000
